// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageView Component should have fallback conditions for all props: fallback display 1`] = `
<PageLayout>
  <PageHeader>
    Subscriptions
  </PageHeader>
  <PageSection>
    <EmptyState
      className="fadein"
      headingLevel="h2"
      variant="full"
    />
  </PageSection>
</PageLayout>
`;

exports[`MessageView Component should render a basic component: basic 1`] = `
<PageLayout>
  <PageHeader>
    Subscriptions
  </PageHeader>
  <PageSection>
    <EmptyState
      className="fadein"
      headingLevel="h2"
      icon={[Function]}
      titleText="lorem"
      variant="full"
    >
      <EmptyStateBody>
        ipsum
      </EmptyStateBody>
    </EmptyState>
  </PageSection>
</PageLayout>
`;

exports[`MessageView Component should render children when provided: children display 1`] = `
<PageLayout>
  <PageHeader>
    Subscriptions
  </PageHeader>
  <PageSection>
    child content
  </PageSection>
</PageLayout>
`;
